manifests-4/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sample-app-4
  name: sample-app-4
  namespace: ns-1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sample-app-4
  template:
    metadata:
      labels:
        app: sample-app-4
    spec:
      containers:
      - image: quay.io/redhatworkshops/bgd:latest
        name: sample-app-4
        resources: {}
