manifests-4/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: sample-app-4
  name: sample-app-4
  namespace: ns-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-app-4
  serviceName: sample-app-4
  template:
    metadata:
      labels:
        app: sample-app-4
    spec:
      containers:
      - image: quay.io/redhatworkshops/bgd:latest
        name: sample-app-4
        resources: {}
