manifests-4/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sample-app-4
  name: sample-app-4
  namespace: ns-1
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: sample-app-4
