manifests-4/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: sample-app-4
  name: sample-app-4
  namespace: ns-1
spec:
  host: "PATCH_ME"
  port:
    targetPort: 8080
  to:
    kind: Service
    name: sample-app-4
    weight: 100
status:
  ingress:
  - conditions:
    - status: "True"
      type: Admitted
